// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Personality renders component 1`] = `
<div
  className="widgetContainer"
>
  <div
    className="mock"
  >
    Slide
  </div>
</div>
`;

exports[`Personality renders loading if finished 1`] = `
<div
  className="widgetContainer"
>
  <div
    className="mock"
  >
    NotReady
  </div>
</div>
`;

exports[`Personality renders loading if not ready 1`] = `
<div
  className="widgetContainer"
>
  <div
    className="mock"
  >
    NotReady
  </div>
</div>
`;

exports[`Personality renders nothing if results ready 1`] = `null`;
